--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Logins",
+  "name": "chattr",
   "version": "1.0.0",
   "engines": {
     "node": "12.16.0",
     "npm": "6.13.7"
   },
-  "description": "A Simple Login Example using Node.js, Mongo and Redis",
+  "description": "Project #2 for IGME-430: real-time chat application",
   "main": "./server/app.js",
   "scripts": {
     "webpack": "webpack",
@@ -22,7 +22,7 @@
     "Redis",
     "Login"
   ],
-  "author": "Cody Van De Mark / Austin Willoughby",
+  "author": "Tommy Delp",
   "license": "Apache 2.0",
   "devDependencies": {
     "eslint": "^8.11.0",
@@ -49,6 +49,7 @@
     "mongoose": "^6.2.7",
     "redis": "^4.0.4",
     "serve-favicon": "^2.5.0",
+    "socket.io": "^4.4.1",
     "underscore": "^1.13.2"
   }
 }
